tests/ui/pattern/usefulness/non-exhaustive-match-nested.stderr
error[E0004]: non-exhaustive patterns: `(Some(&[]), Err(_))` not covered
  --> $DIR/non-exhaustive-match-nested.rs:5:11
   |
LL |     match (l1, l2) {
   |           ^^^^^^^^ pattern `(Some(&[]), Err(_))` not covered
   |
   = note: the matched value is of type `(Option<&[T]>, Result<&[T], ()>)`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         (None, Ok(&[_, _, ..])) => "None, Ok(at least two elements)",
LL +         (Some(&[]), Err(_)) => todo!()
   |

error[E0004]: non-exhaustive patterns: `T::A(U::C)` not covered
  --> $DIR/non-exhaustive-match-nested.rs:15:11
   |
LL |     match x {
   |           ^ pattern `T::A(U::C)` not covered
   |
note: `T` defined here
  --> $DIR/non-exhaustive-match-nested.rs:1:6
   |
LL | enum T { A(U), B }
   |      ^   - not covered
   = note: the matched value is of type `T`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         T::B => { panic!("goodbye"); },
LL +         T::A(U::C) => todo!()
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0004`.
